[package]
name = "simple_rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom_syndication = "0.12.1"
axum = "0.6"
chrono = { version = "0.4.24", features = ["serde"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }
rss = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.40"
tokio = { version = "1.27", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "serde"] }

[dev-dependencies]
httpc-test = "0.1"
anyhow = "1.0.70"
